# editor

backend/: db.sqlite3  pyproject.toml
backend/assignments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/assignments/migrations/: 0001_initial.py  0002_language_alter_assignment_language.py
backend/authentication/: auth.py  views.py
backend/config/: asgi.py  settings.py  urls.py
backend/snippets/: models.py  serializers.py  urls.py  views.py
backend/snippets/migrations/: 0001_initial.py
backend/typing_tracker/: admin.py  apps.py  consumers.py  models.py  redis_stream.py  routing.py
backend/typing_tracker/migrations/: 0001_initial.py  0002_typingsession_burst_count_and_more.py  0003_typingsession_has_started_typing.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CodeEditor.jsx  Login.jsx  Register.jsx
